--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@material-ui/core": "^4.11.3",
+    "disqus-react": "^1.0.11",
+    "emailjs-com": "^2.6.4",
     "fontsource-roboto": "^4.0.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
