--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "disqus-react": "^1.0.11",
     "emailjs-com": "^2.6.4",
     "fontsource-roboto": "^4.0.0",
